responsive css and floating top button

--- a/resources/assets/sass/front/pages/_homepage.scss
+++ b/resources/assets/sass/front/pages/_homepage.scss
@@ -59,45 +59,11 @@
   border-right: 1px solid $light_grey;
 }
 
-.client-logo-row {
-  margin-top: 40px;
-  margin-bottom: 50px;
-}
-
-.client-box {
-  height: 150px;
-  padding: 0 40px;
-  @include respond-to(phone) {margin-bottom: 20px;}
-  @include respond-to(smalltablet) {margin-bottom: 20px;}
-
-  &:not(:hover) svg {
-    path, rect, circle,polygon {
-      fill: $light_grey;
-      stroke: $light_grey;
-    }
-
-    .white {
-      fill: $white;
-      stroke: $white;
-    }
-
-    .white-fill {
-      fill: $white;
-      stroke: $light_grey;
-    }
-  }
-
-  svg {
-    max-height: 150px;
-    min-height: 150px;
-    width: 100%;
-    @include respond-to(phone) {max-width: 150px;}
-    @include respond-to(smalltablet) {max-width: 150px;}
-  }
-}
 
 .client-name-row {
   border-bottom: 1px solid $light_grey;
+  @include respond-to(phone) {border-bottom: none;}
+  @include respond-to(smalltablet) {border-bottom: none;}
 }
 
 .client-name-row.final-row {
@@ -117,6 +83,8 @@
 
   &:not(:last-child) {
     border-right: 1px solid $light_grey;
+    @include respond-to(phone) {border-bottom: none;}
+    @include respond-to(smalltablet) {border-bottom: none;}
   }
 
   &:hover {
