--- a/resources/assets/sass/front/pages/_twocolstructure.scss
+++ b/resources/assets/sass/front/pages/_twocolstructure.scss
@@ -41,6 +41,8 @@
   padding-top: 30px;
   cursor: pointer;
   text-transform: none;
+  @include respond-to(phone) {display: none;}
+  @include respond-to(smalltablet) {display: none;}
   &:hover {
     color: $primary_blue;
   }
