--- a/resources/assets/sass/front/partials/_contentsections.scss
+++ b/resources/assets/sass/front/partials/_contentsections.scss
@@ -42,6 +42,8 @@
 
 .course-row {
   border-bottom: 1px solid $light_grey;
+  @include respond-to(phone) {border-bottom: none;}
+  @include respond-to(smalltablet) {border-bottom: none;}
 
   &.final-row {
     border-bottom: none;
