--- a/resources/assets/sass/front/pages/_services.scss
+++ b/resources/assets/sass/front/pages/_services.scss
@@ -27,8 +27,8 @@
     border: 1px solid $grey_text;
     padding: 50px 1em;
     transition: .75s;
-    @include respond-to(phone) {margin: 2px; vertical-align: bottom;}
-    @include respond-to(smalltablet) {margin: 2px; vertical-align: bottom;}
+    @include respond-to(phone) {margin: 2px; vertical-align: bottom; position: relative; min-height: 260px;}
+    @include respond-to(smalltablet) {margin: 2px; vertical-align: bottom; position: relative; min-height: 300px}
 
     &.dim {
       opacity: 0.5;
@@ -57,8 +57,8 @@
       text-transform: uppercase;
       color: $primary_blue;
       padding-top: 50px;
-      @include respond-to(phone) {font-size: .75em;}
-      @include respond-to(smalltablet) {font-size: .75em;}
+      @include respond-to(phone) {font-size: .75em; position: absolute; left: 0; bottom: 15px;}
+      @include respond-to(smalltablet) {font-size: .75em; width:85%; position: absolute; left: 10px; bottom: 15px;}
     }
 
     &:hover h4 {
@@ -110,6 +110,7 @@
     width: 100%;
     height: 100%;
     position: absolute;
+    left: 0;
   }
 }
 
