--- a/resources/assets/sass/partials/_baserules.scss
+++ b/resources/assets/sass/partials/_baserules.scss
@@ -86,3 +86,22 @@ a, a:visited, a:active, a:hover, a:focus {
 .head-four {
   color: $primary_orange;
 }
+
+#mobile-top-button {
+  position: fixed;
+  top: 90vh;
+  right: 16px;
+  transition: .5s;
+  text-align: center;
+  font-size: 1em;
+  font-family: $body_text;
+  text-transform: uppercase;
+  background-color: $secondary_blue;
+  color: $secondary_orange;
+  width: 50px;
+  height: 50px;
+  line-height: 50px;
+  opacity: 0;
+  border-radius: 50%;
+  box-shadow: 1px 1px 1px $primary_blue;
+}
