--- a/resources/assets/sass/partials/_baserules.scss
+++ b/resources/assets/sass/partials/_baserules.scss
@@ -89,7 +89,8 @@ a, a:visited, a:active, a:hover, a:focus {
 
 #mobile-top-button {
   position: fixed;
-  top: 90vh;
+  display: none;
+  top: 85vh;
   right: 16px;
   transition: .5s;
   text-align: center;
@@ -104,4 +105,6 @@ a, a:visited, a:active, a:hover, a:focus {
   opacity: 0;
   border-radius: 50%;
   box-shadow: 1px 1px 1px $primary_blue;
+  @include respond-to(phone) {display: block;}
+  @include respond-to(smalltablet) {display: block;}
 }
