--- a/resources/assets/sass/front/partials/_carousel.scss
+++ b/resources/assets/sass/front/partials/_carousel.scss
@@ -11,9 +11,11 @@
     position: absolute;
     left: 30px;
     top: 50%;
-    width: 0;
+    width: 50px;
     margin: 0;
     padding: 0;
+    padding-bottom: 50px;
+    background-color: transparent;
     position: absolute;
     border: none;
     color: transparent;
@@ -21,7 +23,7 @@
 
   .slick-next {
     position: absolute;
-    right: 60px;
+    right: 70px;
     top: 50%;
     width: 0;
     margin: 0;
