--- a/resources/assets/sass/front/partials/_footer.scss
+++ b/resources/assets/sass/front/partials/_footer.scss
@@ -35,6 +35,7 @@
     bottom: 10px;
     left: 0;
     width: 100%;
+    font-size: 90%;
 
     .dymantic {
       color: $secondary_orange;
@@ -109,7 +110,7 @@
       color: $secondary_orange;
       font-size: 100%;
       padding-top: 3px;
-      padding-left: 20px;
+      padding-left: 10px;
     }
   }
 }
