ff fix for both buttons now

--- a/resources/assets/sass/front/partials/_carousel.scss
+++ b/resources/assets/sass/front/partials/_carousel.scss
@@ -25,9 +25,11 @@
     position: absolute;
     right: 70px;
     top: 50%;
-    width: 0;
+    width: 50px;
     margin: 0;
     padding: 0;
+    padding-bottom: 50px;
+    background-color: transparent;
     position: absolute;
     border: none;
     color: transparent;
