link hp courses to actual course page, no outline for carousel buttons

--- a/resources/assets/sass/front/partials/_carousel.scss
+++ b/resources/assets/sass/front/partials/_carousel.scss
@@ -19,6 +19,9 @@
     position: absolute;
     border: none;
     color: transparent;
+    &:focus {
+      outline: none;
+    }
   }
 
   .slick-next {
@@ -33,6 +36,9 @@
     position: absolute;
     border: none;
     color: transparent;
+    &:focus {
+      outline: none;
+    }
   }
 
   .slick-next::before {
