typos, new corp structure and updated docs

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -19,6 +19,7 @@
 @import "partials/page_banner";
 @import "front/partials/homecontactform";
 @import "front/partials/slidemenu";
+@import "front/partials/corpstructure";
 
 @import "pages/manageusers";
 @import "pages/login";
