--- a/resources/assets/sass/partials/_baserules.scss
+++ b/resources/assets/sass/partials/_baserules.scss
@@ -116,3 +116,21 @@ p.page-lead {
   font-size: 110%;
   text-align: left;
 }
+
+.admin-home-container {
+  margin-top: -70px;
+  width: 100%;
+  height: 100vh;
+  background: radial-gradient(circle closest-side, $secondary_blue 0%, $primary_blue 100%);
+  position: relative;
+  z-index: -1;
+
+  img {
+    position: absolute;
+    top: 45%;
+    left: 10%;
+    display: block;
+    width: 80%;
+    margin: 0 auto;
+  }
+}
